# cellular

./: .gitignore  Cargo.toml  README.md  justfile  typos.toml
.github/workflows/: mdbook.yml
assets/shaders/: grid.wgsl
book/: .gitignore  book.toml
book/src/: README.md  REFACTOR_PLAN.md  SUMMARY.md
book/src/01_about_the_sim/: README.md  architecture.md
book/src/02_details/: GENOME_ACTIONS.md  README.md  cells.md  systems.md
book/typst/: genome.typ  lib.typ  sprout_spawn.typ
examples/: toggle.rs
src/: cells.rs  cli.rs  config.rs  energy.rs  genes.rs  grid.rs  input.rs  main.rs  simulation.rs  utils.rs
src/cells/: actions.rs  collection.rs  death.rs  execution.rs  lifecycle.rs  mod.rs  plugin.rs  render.rs  spawn.rs  systems.rs  transfer.rs
src/energy/: dispersal.rs  mod.rs  systems.rs
src/genes/: genome.rs  mod.rs  preconditions.rs  random.rs
src/ui/: mod.rs  toggle.rs
