[package]
name = "cellular"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["bevy_dev_tools", "dynamic_linking"] }
bevy-inspector-egui = "0.36.0"
bevy_egui = "0.39.1"
bevy_rand = { version = "0.14.2", features = ["chacha20", "wyrand"] }
clap = { version = "4.6.0", features = ["derive", "wrap_help"] }
either = { version = "1.15.0", features = ["serde"] }
itertools = "0.14.0"
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
nonempty = "0.12.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.14", features = ["wasm_js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
